Styling changes, added hero image placeholders

--- a/accessories.html
+++ b/accessories.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <div class="hero">
+        <div class="hero-image">
+            
+        </div>
+    </div>
     <div class="accessories-grid">
         <div id="output" class="accessories-output"></div>
     
