--- a/customer.html
+++ b/customer.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="hero">
+        <div class="hero-image">
+            
+        </div>
+    </div>
     <div class="customer-flex">
         <form id="customerform">
             <label for="firstname">First name</label>
