--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main-grid">
         <div class="header">
             <div class="flex-full-centered">
-                <h1>SunbeamCars Inc.</h1>
+                <h1><a href="about-us.html">SunbeamCars Inc</a>.</h1>
             </div>
             <div class="login-box flex-full-centered">
                 <i id="login" class="fa fa-user padded-1"></i>
