--- a/receipt.html
+++ b/receipt.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+    <div class="hero">
+        <div class="hero-image">
+            
+        </div>
+    </div>
+    
     <div class="receipt-flex">
         <div id="formoutput">
             <h2>Thanks! We will have the car ready for you!</h2>
