--- a/accessories.html
+++ b/accessories.html
@@ -28,7 +28,7 @@
                 <input type="checkbox" data-item="Snow chains" class="slist" value="188" onchange="calculateTotal(this, this.value)">Snow chains dkr. 188,00<br>
             </div>
 
-            <button class="acc-submit-button" type="submit">Continue</button>
+            <button class="acc-submit-button margin-1" type="submit">Continue</button>
         </form>
 
         <div id="totaloutput" class="accessories-total"></div>
