Added typewriter, various small fixes
Title fix, header styling

--- a/about-us.html
+++ b/about-us.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rent a car | SunbeamCars Inc.</title>
+    <title>About Us | SunbeamCars Inc.</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body class="about-us-body">
+    <h1 class="about-us-header">We are Sunbeam Cars</h1>
     <div>
-        <h1 class="padded-1">Our partners</h1>
+        <!-- Typewriter by Chris Pennington 
+        Source: https://codepen.io/Coding-in-Public/pen/yLPYjrv  -->
+        <div class="typewriter-container flex-full-centered padded-1">
+            <span data-typewriter="Choose..., Customize..., Rent..."></span>
+        </div>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia voluptate magni sit dolores deleniti pariatur fugiat quia dolor quod beatae impedit, eum amet assumenda velit, officiis aperiam aliquam repellat? Voluptatibus tempore adipisci, reprehenderit aperiam deleniti tempora sequi nulla velit ipsa facere veritatis natus enim aut earum distinctio fuga. Quae quam obcaecati, voluptas ut rerum amet laboriosam nisi cumque dolor vitae, animi tenetur dolorem repellat error odit! Error illum eaque nulla neque quidem itaque quaerat odit obcaecati, earum harum deserunt libero, impedit aut sapiente ducimus. Minima, obcaecati sint, eos, velit quos nemo ipsam vel illo animi perferendis dolor reprehenderit rerum ad.
+        </p>
+
+        <h1 class="about-us-header padded-1 flex-full-centered">Our partners</h1>
 
         <!-- Carousel by Radu 
         Source: https://codepen.io/maxym11/pen/dyGEzay  -->
