--- a/about-us.html
+++ b/about-us.html
@@ -28,8 +28,8 @@
         <div id="carousel-wrapper">
             <div id="menu">
                 <div id="current-option">
-                  <span id="current-option-text1" data-previous-text="" data-next-text=""></span>
-                  <span id="current-option-text2" data-previous-text="" data-next-text=""></span>
+                    <span id="current-option-text1" data-previous-text="" data-next-text=""></span>
+                    <span id="current-option-text2" data-previous-text="" data-next-text=""></span>
                 </div>
 
                 <button id="previous-option"></button>
@@ -37,7 +37,11 @@
             </div>
 
             <div id="image"></div>
-          </div>
+        </div>
+
+        <div class="flex-full-centered margin-1">
+            <a class="home-button" href="index.html">Home</a>
+        </div>
     </div>
     <script src="about-us.js"></script>
 </body>
