--- a/accessories.html
+++ b/accessories.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <div class="header">
+        <div class="flex-full-centered">
+            <h1><a href="about-us.html">SunbeamCars Inc</a>.</h1>
+        </div>
+        <div class="login-box flex-full-centered">
+            <i id="login" class="fa fa-user padded-1"></i>
+            <span>Log In</span>
+        </div>
+    </div>
     <div class="hero">
         <div class="hero-image">
             
