--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="login-box flex-full-centered">
                 <i id="login" class="fa fa-user padded-1"></i>
-                <label for="login">Log In</label>
+                <span>Log In</span>
             </div>
         </div>
         <div class="hero">
